# libcutiedesktopfilephraser

./: .gitignore  CMakeLists.txt  README.md
debian/: control  qml6-module-cutiedesktopfilephraser.install  qml6-module-cutiephonenumber.install
src/: cutiedesktopfilephraser.cpp  cutiedesktopfilephraser.h  cutiedesktopfilephraser.json  cutiedesktopfilephraser.pc.in  cutiedesktopfilephraser_p.h  cutiephonenumber.cpp  cutiephonenumber.h  cutiephonenumber.pc.in  cutiephonenumber_p.h  plugin.cpp  plugin.h
src/qml/Cutie/Desktopfilephraser/: qmldir
src/qml/Cutie/Phonenumber/: qmldir
